// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Elements/Tooltip Click 1`] = `
<div
  className="group relative flex cursor-pointer flex-col items-center undefined"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="fixed -z-10 "
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      className="text-12 relative rounded p-3 text-left opacity-0 shadow-monitored w-28 bg-darkCustom text-white "
    >
      <div
        className="absolute border-[5px] bottom-0 left-1/2 transform -translate-x-1/2 mb-[-9px] border-b-transparent border-l-transparent border-r-transparent border-darkCustom"
        style={
          Object {
            "marginLeft": "0px",
          }
        }
      />
      <p
        className="leading-[normal] !font-light  text-12-light with-inner-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This is a tooltip",
          }
        }
        data-testid="txt"
      />
    </div>
  </div>
  Open-Click
</div>
`;

exports[`Storyshots Components/Elements/Tooltip Default 1`] = `
<div
  className="group relative flex cursor-pointer flex-col items-center undefined"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="fixed -z-10 "
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      className="text-12 relative rounded p-3 text-left opacity-0 shadow-monitored w-28 bg-darkCustom text-white "
    >
      <div
        className="absolute border-[5px] bottom-0 left-1/2 transform -translate-x-1/2 mb-[-9px] border-b-transparent border-l-transparent border-r-transparent border-darkCustom"
        style={
          Object {
            "marginLeft": "0px",
          }
        }
      />
      <p
        className="leading-[normal] !font-light  text-12-light with-inner-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This is a tooltip",
          }
        }
        data-testid="txt"
      />
    </div>
  </div>
  Open-Hover
</div>
`;

exports[`Storyshots Components/Elements/Tooltip Hover 1`] = `
<div
  className="group relative flex cursor-pointer flex-col items-center undefined"
  onClick={[Function]}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <div
    className="fixed -z-10 "
    style={
      Object {
        "left": "0px",
        "top": "0px",
      }
    }
  >
    <div
      className="text-12 relative rounded p-3 text-left opacity-0 shadow-monitored w-28 bg-darkCustom text-white "
    >
      <div
        className="absolute border-[5px] bottom-0 left-1/2 transform -translate-x-1/2 mb-[-9px] border-b-transparent border-l-transparent border-r-transparent border-darkCustom"
        style={
          Object {
            "marginLeft": "0px",
          }
        }
      />
      <p
        className="leading-[normal] !font-light  text-12-light with-inner-html"
        dangerouslySetInnerHTML={
          Object {
            "__html": "This is a tooltip",
          }
        }
        data-testid="txt"
      />
    </div>
  </div>
  Open-Hover
</div>
`;
